// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders full input correctly 1`] = `
"/**
 * @flow
 * HASH
 */

/* eslint-disable */
// flowlint untyped-type-import:off

import type { DOCUMENT_TYPE } from 'relay-runtime';
TYPE_TEXT

/*
DOC_TEXT
*/

const node: DOCUMENT_TYPE = CONCRETE_TEXT;
// prettier-ignore
(node: any).hash = 'SOURCE_HASH';
declare var __DEV__: boolean;
if (__DEV__) {
  DEV_ONLY_ASSIGNMENTS
}
export default node;
"
`;

exports[`renders minimal input correctly 1`] = `
"/**
 * @flow
 */

/* eslint-disable */
// flowlint untyped-type-import:off

import type { DOCUMENT_TYPE } from 'relay-runtime';
TYPE_TEXT


const node: DOCUMENT_TYPE = CONCRETE_TEXT;
// prettier-ignore
(node: any).hash = 'SOURCE_HASH';
export default node;
"
`;
